--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -766,7 +766,7 @@ button {
 }
 
 .experience:before {
-  background: url(https://1.bp.blogspot.com/-QZ2y8jMovDU/XuqFTCvsLMI/AAAAAAAAeCQ/fJejc-XSfKsJQqnX-6jSu51YieeSNupawCLcBGAsYHQ/s1600/beach%2BCaanccun%2B-%2BFoto%2Bde%2BDaniel%2BNieto%2Bno%2BPexels_Easy-Resize.com.jpg)
+  background: url(https://s3-alpha-sig.figma.com/img/0ea4/c3a3/7f41c38f2c560a25c1ad71b5388b2c2d?Expires=1625443200&Signature=fG5Xv90Kg~fala6vYG9oBQml5BiKpfiHURElm9CUJ2OBweUzZ0zlOCUdNSqNlxmps1n3aoV2bmG97kshHc-GO92UtINbu6bqk1gGOmQRBXYaZdIVSXQG6PcMWbnNhPh2Ct3NlPySktMXHmxKIQdr59Ymn0kXa1HJcgNLZukNUneyt~yh8SNlsuGFkT~1vOeEp6fPBNx9WKBGWJt0UzIbwgdmOtZgsXvLMAu8peU-H0y0bp4RExAt1iTAWPTB32Z8ajz2oe0-h52hnJnrT968szcr7DWUzl1CUKxpl8Ts0oreyBdYUlJJx5QURFhczxaAwjDovMnkBFytI~qxY19A7g__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA)
     no-repeat center;
   background-size: cover;
   content: "";
